--- a/module2solution.html.html
+++ b/module2solution.html.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<link rel="stylesheet" href="module2-solution.css">
+<link rel="stylesheet" href="module2solution.css">
 <meta charset="utf-8">
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <title>Module 2 solution</title>
