--- a/index.html
+++ b/index.html
@@ -1,32 +1,44 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 <head>
-<link rel="stylesheet" href="css/style.css">
-<meta charset="utf-8">
-<meta name='viewport' content='width=device-width, initial-scale=1'>
-<title>Module 2 solution</title>
+  <meta charset="utf-8">
+  <meta name="view-port" content="width=device-width, initial-scale=1">
+
+  <title>Assignment Solution for Module 2</title>
+
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1>Our Menu</h1>
-<div class='row'>
-	<div class='col-lg-4 col-md-6 sx-12'>
-		<div class='section'>
-			<span id='nr1'>Chicken</span>
-				<p>In publishing and graphic design, lorem ipsum (derived from Latin dolorem ipsum, translated as "pain itself") is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation. Replacing meaningful content with placeholder text allows viewers to focus on graphic aspects such as font, typography, and page layout without being distracted by the content. <a href='https://en.wikipedia.org/wiki/Lorem_ipsum' target='blank' title='Source'>Source</a></p>
-		</div>
-	</div>
-	<div class='col-lg-4 col-md-6 sx-12'>
-		<div class='section'>
-			<span id='nr2'>Beef</span>
-				<p>In publishing and graphic design, lorem ipsum (derived from Latin dolorem ipsum, translated as "pain itself") is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation. Replacing meaningful content with placeholder text allows viewers to focus on graphic aspects such as font, typography, and page layout without being distracted by the content. <a href='https://en.wikipedia.org/wiki/Lorem_ipsum' target='blank' title='Source'>Source</a></p>
-		</div>
-	</div>
-	<div class='col-lg-4 col-md-12 sx-12'>
-		<div class='section'>
-			<span id='nr3'>Sushi</span>
-				<p>In publishing and graphic design, lorem ipsum (derived from Latin dolorem ipsum, translated as "pain itself") is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation. Replacing meaningful content with placeholder text allows viewers to focus on graphic aspects such as font, typography, and page layout without being distracted by the content. <a href='https://en.wikipedia.org/wiki/Lorem_ipsum' target='blank' title='Source'>Source</a></p>
-		</div>
-	</div>
-</div>
+
+  <h1>Our Menu</h1>
+
+  <div class="col-lg-4 col-md-6 col-sm-12">
+    <div class="container">
+      <h3 class="title-box-1">Chicken</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </div>
+
+  <!-- responsive -->
+  <div class="col-lg-4 col-md-6 col-sm-12">
+
+    <div class="container">
+      <h3 class="title-box-2">Beef</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    </div>
+
+  </div>
+
+  <div class="col-lg-4 col-md-12 col-sm-12">
+
+
+    <div class="container">
+      <h3 class="title-box-3">Sushi</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </div>
+
+
 </body>
-</html>
+</html
