--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   
 <head>
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="../css/styles.css">
 <meta charset="utf-8">
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <title>Module 2 solution</title>
